src/test/ui/editions/edition-imports-2015.stderr
error: cannot glob-import all possible crates
  --> $DIR/edition-imports-2015.rs:23:5
   |
LL |     gen_glob!();
   |     ^^^^^^^^^^^^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

